# screenwhisper

./: CMakeLists.txt  README.txt  main.cc  screenwhisper.cfg
aggregator/: CMakeLists.txt  aggreagtor_file.cc  aggregator.h  mic_observer.cc  microphone_observer.cc  raw_sw_file.cc  screen_observer.cc
inference/: CMakeLists.txt
knowledge/: CMakeLists.txt
